--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.2.7"
 djangorestframework = "^3.16.1"
+psycopg2-binary = "^2.9.10"
+psycopg = "^3.2.10"
+drf-spectacular = "^0.28.0"
 
 
 [build-system]
