--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.16.1"
 psycopg2-binary = "^2.9.10"
 psycopg = "^3.2.10"
 drf-spectacular = "^0.28.0"
+djangorestframework-simplejwt = "^5.5.1"
 
 
 [build-system]
