--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.9'
-
 services:
   db:
-    image: postgres:17
+    image: postgres:15
+    restart: unless-stopped
     env_file:
       - .env
     environment:
@@ -10,28 +9,42 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    ports:
-      - "5432:5432"
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     env_file:
       - .env
     environment:
-      DEBUG: ${DEBUG}
-      SECRET_KEY: ${SECRET_KEY}
+      DJANGO_SETTINGS_MODULE: config.settings.dev
       DATABASE_URL: ${DATABASE_URL}
-      DJANGO_SETTINGS_MODULE: ${DJANGO_SETTINGS_MODULE}
-      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
     volumes:
-      - .:/app
+      - .:/app:rw
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     depends_on:
       - db
-    stdin_open: true
-    tty: true
+    command: >
+      bash -c "
+      echo 'Waiting for database...' &&
+      until pg_isready -h ${DB_HOST:-db} -p ${DB_PORT:-5432} -U ${POSTGRES_USER:-user}; do
+        sleep 1;
+      done &&
+      echo 'Apply migrations' &&
+      python manage.py migrate --noinput &&
+      python manage.py runserver 0.0.0.0:8000
+      "
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
