--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ psycopg2-binary = "^2.9.10"
 psycopg = "^3.2.10"
 drf-spectacular = "^0.28.0"
 djangorestframework-simplejwt = "^5.5.1"
+django-allauth = {extras = ["google"], version = "^65.11.2"}
+dj-rest-auth = "^7.0.1"
+pillow = "^11.3.0"
 
 
 [build-system]
