--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,26 @@
-SECRET_KEY=replace_with_a_strong_secret_key
+# Django
+SECRET_KEY=your-key
 DJANGO_SETTINGS_MODULE=config.settings.dev
-DEBUG=1
+DJANGO_DEBUG=True
 
+# Hosts
+ALLOWED_HOSTS=127.0.0.1,localhost,0.0.0.0
+
+# Postgres
 POSTGRES_DB=chatty
-POSTGRES_USER=chatty
-POSTGRES_PASSWORD=your_db_password_here
+POSTGRES_USER=user
+POSTGRES_PASSWORD=your-pass
 DB_HOST=db
 DB_PORT=5432
 
+DATABASE_URL=postgres://YOUR-USER:YOUR-PASS@db:5432/chatty
+
 USE_S3=0
-MINIO_ACCESS_KEY=your_minio_access_key
-MINIO_SECRET_KEY=your_minio_secret_key
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
 MINIO_ENDPOINT=http://minio:9000
 MINIO_BUCKET=chatty-media
 
-# DATABASE_URL=postgres://chatty:password@db:5432/chatty
+# Email (dev)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+DEFAULT_FROM_EMAIL=webmaster@localhost
