docker: dockerfile configured + added superuser creation script

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ MINIO_BUCKET=chatty-media
 # Email (dev)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
 DEFAULT_FROM_EMAIL=webmaster@localhost
+
+DJANGO_SUPERUSER_EMAIL=your-email
+DJANGO_SUPERUSER_PASSWORD=your-pass
