--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-django = "^5.2.7"
+django = ">=5,<6"
 djangorestframework = "^3.16.1"
 psycopg2-binary = "^2.9.10"
 psycopg = "^3.2.10"
@@ -19,6 +19,7 @@ pillow = "^11.3.0"
 django-widget-tweaks = "^1.5.0"
 django-crispy-forms = "^2.4"
 crispy-bootstrap5 = "^2025.6"
+pytest = "^8.4.2"
 
 
 [build-system]
