--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-widget-tweaks = "^1.5.0"
 django-crispy-forms = "^2.4"
 crispy-bootstrap5 = "^2025.6"
 pytest = "^8.4.2"
+drf-spectacular-sidecar = "^2025.10.1"
 
 
 [build-system]
