--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,10 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - .:/app:rw
+      - ./static:/app/static
       - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - ./media:/app/media
+
     ports:
       - "8000:8000"
     depends_on:
