--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ django-crispy-forms = "^2.4"
 crispy-bootstrap5 = "^2025.6"
 pytest = "^8.4.2"
 drf-spectacular-sidecar = "^2025.10.1"
+django-taggit = "^6.1.0"
 
 
 [build-system]
